# rag-control-mcp

./: .gitignore  ARCHITECTURE_REVIEW.md  README-KR.md  README.md  TODOs.md  pyproject.toml  run.py  test_integration.py
data/: modules.backup.1753005666  modules.backup.1753005696  modules.backup.1753005728  modules.backup.1753005744  modules.backup.1753005760  modules.backup.1753036396  modules.backup.1753036444  modules.backup.1753036458  modules.json
docs/: adapters_design.md  api_design.md  controller_design.md  dependencies.md  implementation_tasks.md  index.md  mcp_adapter_update.md  models_design.md  project_structure.md  rag_module_types_design.md  streamlit_interface_design.md  vector_database_mcp_integration.md  web_interface_usage.md
examples/: langgraph_integration_example.py  rag_module_examples.py
poc/: README.md
poc/basic_rag/: rag_pipeline.py  requirements.txt  test_rag_pipeline.py
poc/basic_rag/data/: sample_doc.txt
poc/vector_mcp/: client_script.py  mcp_server.py  requirements.txt  test_mcp_server.py
src/: __init__.py  cli.py  main.py
src/adapters/: __init__.py  base_adapter.py  database_adapter.py  routing_adapter.py  vector_adapter.py
src/api/: app.py
src/api/middleware/: security.py
src/api/routes/: execute.py  modules.py  pipelines.py
src/mcp_rag_control/: __init__.py  cli.py  main.py
src/mcp_rag_control/adapters/: base_adapter.py  database_adapter.py  vector_adapter.py
src/mcp_rag_control/api/: app.py
src/mcp_rag_control/api/middleware/: security.py
src/mcp_rag_control/api/routes/: execute.py  modules.py  pipelines.py
src/mcp_rag_control/models/: __init__.py  data_flow_schemas.py  module.py  pipeline.py  request.py
src/mcp_rag_control/registry/: __init__.py  module_registry.py
src/mcp_rag_control/storage/: json_storage.py
src/mcp_rag_control/utils/: config.py  langgraph_factory.py  logger.py
src/models/: __init__.py  data_flow_schemas.py  module.py  pipeline.py  request.py  routing_schemas.py
src/registry/: __init__.py  module_registry.py  pipeline_registry.py
src/routing/: __init__.py  cost_optimizer.py  decision_engine.py  knowledge_assessor.py  query_classifier.py  route_controller.py
src/storage/: __init__.py  json_storage.py
src/utils/: __init__.py  config.py  langgraph_factory.py  logger.py
tests/: __init__.py  conftest.py  test_base_adapter.py  test_module_registry.py  test_vector_adapter.py
tests/unit/adapters/: test_base_adapter.py
tests/unit/models/: test_routing_schemas.py
tests/unit/routing/: __init__.py  test_query_classifier.py
